--- a/장고/sample1/templates/gu.html
+++ b/장고/sample1/templates/gu.html
@@ -38,11 +38,11 @@
     <footer>
         <span>
             <b>
-            Copyright ⓒ 2022. OB상조 All rights reserved /  
+            Copyright ⓒ 2022. OB상조 All rights reserved  
             </b>
         </span>
         <span>
-            <b>Designed by 김화신 이성길 이종호 전동준 조완제 / </b>
+            <b>Designed by 김화신 이성길 이종호 전동준 조완제 </b>
         </span>
         <span>
             <b>
