--- a/장고/sample1/templates/index.html
+++ b/장고/sample1/templates/index.html
@@ -26,17 +26,17 @@
 </head>
 <body>
     <header>
-        <h1>우리 상권 분석</h1>
+        <h1>서울시 상권 분석</h1>
     </header>
     <main>
         <form method="post" name="frm">
                 <div class="m-bt1">
                     <div class="p-bt1" onclick="click1()">
                         <div class="image">
-                            <img src="{% static 'img/인구.jpg' %}" alt="">
+                            <img src="{% static 'img/인구분석.png' %}" alt="">
                         </div>
                         <div class="txt">
-                            <p>우리 사람 누구 있지?</p>
+                            <p>생활인구 분석</p>
                         </div>
                     </div>
                 </div>
@@ -44,10 +44,10 @@
                 <div class="m-bt2">
                     <div class="p-bt2" onclick="click2()">
                         <div class="image">
-                            <img src="{% static 'img/상권.jpg' %}" alt="">
+                            <img src="{% static 'img/업종분석.png' %}" alt="">
                         </div>
                         <div class="txt">
-                            <p>우리 상권 뭐 있지?</p>
+                            <p>업종 별 매출 분석</p>
                         </div>
                     </div>
                 </div>
