--- a/장고/sample1/templates/pop_info.html
+++ b/장고/sample1/templates/pop_info.html
@@ -104,11 +104,11 @@
     <footer>
       <span>
         <b>
-        Copyright ⓒ 2022. OB상조 All rights reserved /  
+        Copyright ⓒ 2022. OB상조 All rights reserved  
         </b>
       </span>
       <span>
-        <b>Designed by 김화신 이성길 이종호 전동준 조완제 / </b>
+        <b>Designed by 김화신 이성길 이종호 전동준 조완제 </b>
       </span>
       <span>
         <b>
@@ -195,7 +195,7 @@
                     data: treemapData
                 }],
                 title: {
-                    text: '상권별 연 평균 인구수'
+                    text: '행정구 내 상권별 연 평균 생활인구수'
                 }
             })
         })
