--- a/장고/sample1/templates/sangkwon.html
+++ b/장고/sample1/templates/sangkwon.html
@@ -38,13 +38,13 @@
 </head>
 <body>
     <header>
-        <h1>{{gu}} 상권 선택</h1>
+        <h1>상권을 선택해 주세요.</h1>
     </header>
     <main>
         <form method="post" name="frm">
             <div class="main">
                 <div class="chart">
-                    <table>
+                    <table class="sangkwontb">
                         {% for i in v|ranges %}
                         <tr>
                             {% for j in h|ranges %}
