--- a/장고/sample1/static/css/sk_info.css
+++ b/장고/sample1/static/css/sk_info.css
@@ -1,120 +1,265 @@
-#chart {
-    position: absolute;
-    top : 170px;
-    left : 280px;
-    background-color: white;
-    width: 900px;
+/* 배민 한나프로체 */
+@font-face{
+    font-family: 'Baemin';
+    src: url('../font/BMHANNAPro.ttf');
+    font-weight: normal;
+    font-style: normal;
 }
+
+/* 고도 마음체 */
+@font-face{
+    font-family: 'GodoM';
+    src: url('../font/GodoM.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* 고양시 고양체 */
+@font-face{
+    font-family: 'Goyang';
+    src: url('../font/Goyang.ttf');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+*{
+    margin:0;
+    padding:0;
+}
+
+html{
+    width:100%;
+    height:100%;
+}
+
 body{
-    position: relative;
-    width: 1350px;
-    background-color: #B9eeff;
+    font-family: 'GodoM';
+    width:100%;
+    height:100%;
 }
-#yourfind {
-    border-radius: 10px;
-    background-color: white;
-    width: 700px;
-    height: 50px;
+
+header{
+    width:100%;
+    height:12%;
+    background-color : black;
+}
+
+
+h1{
+    font-size: 40px;
+    line-height: 70px;
+    text-align: center;
+    color: #ffffff;
+}
+
+.home{
     position: absolute;
-    text-align: center;
-    top : 70px;
-    left: 400px;
+    left: 95%;
+    top: 0%;
 }
-#writeplace {
+
+main{
+    background-color: #f5f5f5;
+    width:100%;
+    height: 81%;
     text-align: center;
-    font-size: 30px;
 }
-#yourfind2 {
-    border-radius: 10px;
+
+footer{
+    font-family: 'Goyang';
+    width: 100%;
+    height:7%;
+    text-align: center;
+    background-color: #e3dfd7;
+    display:table;
+    font-size: large;
+}
+
+footer > span{
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#chart {
     background-color: white;
-    width: 600px;
-    height: 30px;
-    position: absolute;
-    text-align: center;
-    top : 130px;
-    left: 450px;
+    height:100%;
+    width: 100%;
 }
-#writeplace2 {
+
+
+.main1{
+    width:100%;
+    height:30%;
+    display: inline-block;
+}
+
+.main2{
+    width:100%;
+    height:70%;
+    display: inline-block;
+
+}
+
+.main1 > div{
+    height: 100%;
+    display: inline-block;
+    box-sizing: border-box;
+    float: left;
+    margin-top: 10px;
+}
+
+.main1-1{
+    width: 22%;
+}
+.main1-1 > div{
+    padding-top: 5px;
+}
+
+.main1-2{
+    width: 56%;
+
+}
+
+.main1-3{
+    width: 22%;
+}
+
+.main1-3 > div{
+    display: inline-block;
+}
+
+
+.main2 > div{
+    height:100%;
+    float: left;
+    display: inline-block;
+    box-sizing: border-box;
+}
+
+.main2-1{
+    width:22%;
+}
+.main2-2{
+    width:56%;
+}
+.main2-3{
+    width:22%;
+}
+
+
+.main1-1-1{
+    width:100%;
+    height:33.3%;
+}
+.main1-1-2{
+    width:100%;
+    height:33.3%;
+
+}
+
+.main1-1-3{
+    width:100%;
+    height:33.3%;
+}
+
+#guselect {
+    border-radius:5px;
+    width: 30%;
+    cursor: pointer;
+}
+
+#sangcon {
+    border-radius:5px;
+    width: 60%;
+    cursor: pointer;
+}
+
+#showingstore {
+    /* border-radius: 10px; */
+    /* border : 1px solid black; */
     text-align: center;
-    font-size: 20px;
+}
+
+#writehere {
+    text-align: center;
+    font-size: 40px;
 }
 
 
 #whatStore {
-    position:absolute;
-    left:10px;
-    top: 50px;
-    width:150px;
-    height:40px;
-}
-
-#age {
-    position:absolute;
-    top: 160px;
-}
-
-#week {
-    position:absolute;
-    top: 290px;
-}
-
-#time {
-    position:absolute;
-    top: 420px;
-}
-
-#sex {
-    position:absolute;
-    top: 550px;
-}
-
-#jumposu {
-    position:absolute;
-    top: 680px;
-}
-
-#another {
-    position:absolute;
-    left :1300px;
-    width : 200px;
-    height : 50px;
-    font-size: large;
-
-}
-
-#guselect {
-     position:absolute;
-     left: 10px;
-     border-radius:3px;
-     top: 5px;
-     width:100px;
-     height: 40px;
-}
-#sangcon {
-    position:absolute;
-    border-radius:3px;
-    top:5px;
-    left : 120px;
-    height: 40px;
+    border-radius:5px;
+    width: 60%;
+    text-align: center;
+    cursor: pointer;
 }
 
 #check {
-    position:absolute;
-    top:48px;
-    left: 175px;
-    width: 90px;
-    height : 50px;
-    font-size: large;
+    width: 30%;
+    color : white;
+    cursor: pointer;
 
 }
 
 #gogo {
+    width: 93.5%;
+    color : white;
+    cursor: pointer;
+}
+
+
+
+
+
+.main2-1{
+    margin-top: 10px;
+}
+
+
+.main2-1 > div{
+    margin-top: 5px;
+}
+
+.main2-1 > div > img{
+    cursor: pointer;
+}
+
+
+/* #another {
     position:absolute;
-    top: 105px;
-    left: 40px;
-    width : 165px;
-    height: 50px;
+    left :1300px;
+    width : 200px;
+    height : 10px;
     font-size: large;
 
+} */
 
+
+#showChart{
+    width: 100%;
+    height: 100%;
+}
+
+
+#triImg{
+    cursor: pointer;
+}
+
+
+.main1-3-1{
+    
+}
+.main1-3-2{
+    float: right;
+}
+
+/* 움직이는 화살표 */
+#pointerRight{
+    margin-left: 100px;
+    animation: motion 0.3s linear 0s infinite alternate; padding-left: 0px;
+}
+        
+@keyframes motion {
+	0% {padding-left: 0px;}
+	100% {padding-left: 20px;}
 }
