장고 모든 기능 적용 끝

--- a/장고/sample1/templates/pop_info.html
+++ b/장고/sample1/templates/pop_info.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>OB상조 | {{wheresk}} 생활인구 정보</title>
     <script src ='https://code.jquery.com/jquery-3.6.0.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-treemap@0.2.3"></script>
@@ -13,6 +13,7 @@
     <script src="http://code.highcharts.com/modules/treemap.js"></script>
     <script src="http://code.highcharts.com/modules/heatmap.js"></script>
     <link rel="stylesheet" href="{% static 'css/pop_info.css' %}" type="text/css">
+    <link rel="shortcut icon" href="{% static 'img/ob파비콘.ico' %}">
     <script>
         $( document ).ready( function() {
             $( '.sex' ).fadeIn(2000)
