--- a/장고/sample1/templates/showlist.html
+++ b/장고/sample1/templates/showlist.html
@@ -21,7 +21,7 @@
             var tableplace = document.getElementById('here');
             tableplace.appendChild(table);
             table.border=1;
-            alert(svlist)
+            // alert(svlist)
             for (var i=0; i< list.length; i++){
                 var tr = document.createElement('tr');
                 table.appendChild(tr);
