--- a/장고/sample1/static/css/index.css
+++ b/장고/sample1/static/css/index.css
@@ -104,10 +104,12 @@ footer > span{
 .image{
     width:100%;
     height:100%;
+    
 }
 .image img{
     width: 100%;
     height: 100%;
+    cursor: pointer;
     -webkit-animation:blink 1.5s ease-in-out infinite alternate;
     -moz-animation:blink 1.5s ease-in-out infinite alternate; 
     animation:blink 1.5s ease-in-out infinite alternate;
