--- a/장고/sample1/static/css/sk_info.css
+++ b/장고/sample1/static/css/sk_info.css
@@ -145,6 +145,7 @@ footer > span{
 }
 .main2-3{
     width:22%;
+    
 }
 
 
@@ -183,7 +184,7 @@ footer > span{
 
 #writehere {
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
 }
 
 
@@ -245,15 +246,17 @@ footer > span{
     cursor: pointer;
 }
 
-
 .main1-3-1{
-    
+    float:right;
 }
 .main1-3-2{
+    float:left;
+}
+.main1-3-3{
     float: right;
 }
 
-/* 움직이는 화살표 */
+/* 움직이는 손가락 */
 #pointerRight{
     margin-left: 100px;
     animation: motion 0.3s linear 0s infinite alternate; padding-left: 0px;
@@ -261,5 +264,12 @@ footer > span{
         
 @keyframes motion {
 	0% {padding-left: 0px;}
-	100% {padding-left: 20px;}
+	100% {padding-left: 30px;}
+}
+
+
+
+/* 업종 Top3  */
+.toptop{
+    display:none;
 }
