--- a/장고/sample1/templates/gu.html
+++ b/장고/sample1/templates/gu.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>OB상조 | 행정구 선택</title>
     <link rel="stylesheet" href="{% static 'css/gu.css' %}" type="text/css">
+    <link rel="shortcut icon" href="{% static 'img/ob파비콘.ico' %}">
     <script src = 'https://code.jquery.com/jquery-3.6.0.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael.js"></script>
     <script>
