--- a/장고/sample1/templates/index.html
+++ b/장고/sample1/templates/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>OB상조 | 상권분석 서비스</title>
     <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css">
+    <link rel="shortcut icon" href="{% static 'img/ob파비콘.ico' %}">
     <script>
         
 
