--- a/장고/sample1/templates/sangkwon.html
+++ b/장고/sample1/templates/sangkwon.html
@@ -6,8 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>OB상조 | {{wheregu}} 상권선택</title>
     <link rel="stylesheet" href="{% static 'css/sangkwon.css' %}" type="text/css">
+    <link rel="shortcut icon" href="{% static 'img/ob파비콘.ico' %}">
     <script>
         //hover 색변환, 누르면 해당 이름 send하면서 다음 페이지
         function clicks(val){
